# ChangeLog for NetApp Cacti scripts
# Copyright 2008-2008 Chris Gianelloni; Distributed under the GPL v2
# $Header: $

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Commenting out the debug output code for the time being until I can find
  time to troubleshoot it.

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  This is supposed to be foreach instead of a for loop.

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Adding 64-bit counters to the volume stats. The usage of the 64-bit
  counters is keyed on the SNMP version. If the SNMP version of the filer is
  > 1, we use the 64-bit counters. Otherwise, we use the 32-bit high and low
  and derive our 64-bit value from them. This does not do any checking on
  the ONTAP version (yet), but SNMPv2 and SNMPv3 don't work on ONTAP prior
  to 7.3, anyway.

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  +cacti/netapp/scripts/get_netapp_disk_rbytes.pl,
  +cacti/netapp/scripts/get_netapp_disk_wbytes.pl:
  Adding a script to get the disk read/write bytes.

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  It helps if I add the script.

  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Add fcp to local variable names.

  07 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Only do the SNMP get on licenses where we detect support on the filer.

  07 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Prepend fcp to variables in the ss_netapp_fcp function.

  07 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Change the OID calls in the ss_netapp_add_high_low function to work with
  both indexed and non-indexed OID trees. This allows us to use this