@@ -2,6 +2,12 @@
 # Copyright 2008-2008 Chris Gianelloni; Distributed under the GPL v2
 # $Header: $
 
+  19 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  +cacti/netapp/snmp_queries/netapp-luns.xml,
+  +cacti/netapp/snmp_queries/netapp-volumes.xml:
+  Adding SNMP-based versions for ONTAP 7.3, which supports SNMPv2 and SNMPv3
+  (yay counter64).
+
   14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/scripts/ss_netapp.php:
   Commenting out the debug output code for the time being until I can find
